Grease pencil dopesheet fails on a few operations #33378

Closed
opened 2012-12-01 23:13:22 +01:00 by Daniel Salazar · 6 comments
Member

%%%Check the following in the included file:

Dopesheet snap "Shift S" doesn't work

Border selecting on the summary channel doesn't work%%%

%%%Check the following in the included file: Dopesheet snap "Shift S" doesn't work Border selecting on the summary channel doesn't work%%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'

%%%Border select looks ok to me?

As for Snapping menu, it’s simply not implemented for gpencil and mask currently… Will see if this can be done simply, else will just disable that menu in these modes until 2.65 is over.%%%

%%%Border select looks ok to me? As for Snapping menu, it’s simply not implemented for gpencil and mask currently… Will see if this can be done simply, else will just disable that menu in these modes until 2.65 is over.%%%

%%%patch available here (also adds snapping to mask as well): http://www.pasteall.org/37715/diff%%%

%%%patch available here (also adds snapping to mask as well): http://www.pasteall.org/37715/diff%%%

%%%This patch looks ok to me, think it's safe to commit this.%%%

%%%This patch looks ok to me, think it's safe to commit this.%%%

%%%Committed as r52745, closing. Thanks for the report. :)%%%

%%%Committed as r52745, closing. Thanks for the report. :)%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#33378
No description provided.